# VaultMesh

./: .gitignore  README.md  docker-compose.yml
control_panel/: requirements.txt
control_panel/src/: auth.py  database.py  main.py  models.py
control_panel/src/api/: auth_routes.py  file_routes.py
db_infra/: commands.txt
db_infra/postgres/: init.sql
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/pages/: Dashboard.jsx  Login.jsx
scripts/: test_client.py  test_upload.txt
store_core/: CMakeLists.txt
store_core/include/: StorageNode.h
store_core/include/common/: Protocol.h
store_core/src/: StorageNode.cpp  main.cpp
